css/netmann.css
.table * {
    border-width: 1px;
    border-style: solid;
    border-color: black;
}

.rejected {
    color: red;
}

.accepted {
    color: green;
}

.headline {
    color: rgb(2, 99, 182);
}

.navWrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;

    background-color: #D3D3D3;
    border-top-style: solid;
    border-bottom-style: solid;
    border-top-width: 3px;
    border-bottom-width: 3px;
    border-color: rgb(2, 99, 182);
}

.navWrapper ul {
    display: flex;
    gap: 4rem;
    list-style-type: none;
}

.navWrapper a {
    text-decoration: none;
    color: rgb(2, 99, 182);
}

.navWrapper a:active {
    color: rgb(2, 99, 182);
}

.divider {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid rgb(2, 99, 182);
    margin: 1em 0;
    padding: 0;
}

.bottom-footer {
    display: flex;
    gap: 4rem;
}

